| Bug #43888 | ndbrequire fail in DBDIH during other node failures | ||
|---|---|---|---|
| Submitted: | 26 Mar 2009 16:00 | Modified: | 2 Apr 2009 8:46 |
| Reporter: | Andrew Hutchings | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S2 (Serious) |
| Version: | OS: | Any | |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[26 Mar 2009 16:00]
Andrew Hutchings
[31 Mar 2009 13:28]
Jonas Oreland
reproduced with error insert, easy to fix
[1 Apr 2009 11:26]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/71061 2894 Jonas Oreland 2009-04-01 ndb - bug#43888 - fix race condition with ndb dieing during restart, when just about to be included into gcp
[1 Apr 2009 12:36]
Bugs System
Pushed into 5.1.32-ndb-6.2.18 (revid:jonas@mysql.com-20090401115605-youo23cdc00fceyr) (version source revid:jonas@mysql.com-20090401112538-7we3wp7172fa0drr) (merge vers: 5.1.32-ndb-6.2.18) (pib:6)
[1 Apr 2009 12:37]
Bugs System
Pushed into 5.1.32-ndb-6.3.24 (revid:jonas@mysql.com-20090401122231-l9tvo17bvrt9u63k) (version source revid:jonas@mysql.com-20090401121609-592sd1odszpxryv5) (merge vers: 5.1.32-ndb-6.3.24) (pib:6)
[1 Apr 2009 12:38]
Bugs System
Pushed into 5.1.32-ndb-7.0.5 (revid:jonas@mysql.com-20090401122817-spwyy3i31k8yx4nq) (version source revid:jonas@mysql.com-20090401122652-mei4hg1h61i10ghv) (merge vers: 5.1.32-ndb-7.0.5) (pib:6)
[2 Apr 2009 8:46]
Jon Stephens
Documented bugfix in the NDB-6.2.18, 6.3.24, and 7.0.5 changelogs as follows:
A race condition could occur when a data node failed to restart
just before being included in the next global checkpoint. This
could cause other data nodes to fail.
