ndb - bug#43888 - fix race condition with ndb dieing during restart, when just about to be included into gcp