storage/ndb/src/kernel/blocks/dbdih/Dbdih.hpp
@@ -1479,7 +1479,7 @@ private:
     Uint32 failNr;
     bool activeState;
     bool blockLcp;
-    bool blockGcp;
+    Uint32 blockGcp; // 0, 1=ordered, 2=effective
     Uint32 startInfoErrorCode;
     Uint32 m_outstandingGsn;
   };
